@@ -2089,7 +2089,8 @@ SEXP R_SetOption(SEXP, SEXP);
 void R_Suicide(const char *);
 SEXP R_flexiblas_info(void);
 void R_getProcTime(double *data);
-int R_isMissing(SEXP symbol, SEXP rho);
+Rboolean R_isMissing(SEXP symbol, SEXP rho);
+Rboolean R_missing(SEXP symbol, SEXP rho);
 const char *sexptype2char(SEXPTYPE type);
 void sortVector(SEXP, Rboolean);
 void SrcrefPrompt(const char *, SEXP);
